--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container1">
         <img src="images/ntfs/nft-2.svg" alt="" />
         <div>
-          <h5 class="goldGloop">GLOOP SERIES</h5>
+          <h5 class="gold">GLOOP SERIES</h5>
           <h1>Beige</h1>
           <p class="paragraph">#12983</p>
         </div>
@@ -106,7 +106,7 @@
       <div class="container1 invisible">
         <img src="images/ntfs/ntf-3.svg" alt="" />
         <div>
-          <h5 class="goldGloop">GLOOP SERIES</h5>
+          <h5 class="gold">GLOOP SERIES</h5>
           <h1>Red Man</h1>
           <p class="paragraph">#12983</p>
         </div>
@@ -120,7 +120,7 @@
       <div class="container1 invisible">
         <img src="images/ntfs/ntf-4.svg" alt="" />
         <div>
-          <h5 class="goldGloop">GLOOP SERIES</h5>
+          <h5 class="gold">GLOOP SERIES</h5>
           <h1>Green</h1>
           <p class="paragraph">#12983</p>
         </div>
